k8s/part3/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-app-network-policy
  namespace: default
spec:
  # Polityka dotyczy Podow z etykieta app=aras-demo-app
  podSelector:
    matchLabels:
      app: aras-demo-app
  # Definiujemy reguly dla ruchu PRZYCHODZACEGO (ingress)
  policyTypes:
    - Ingress
  ingress:
    # Zezwalamy na ruch z namespace kube-system
    # Tam dziala Traefik (Ingress Controller) i metrics-server
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    # Zezwalamy na ruch miedzy replikami tej samej aplikacji
    - from:
        - podSelector:
            matchLabels:
              app: aras-demo-app
    # Zezwalamy na ruch z namespace monitoring (Prometheus)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
